managed to group together articles displayed as a list

--- a/KoloLos/Views/ListOfArticles/Details.cshtml
+++ b/KoloLos/Views/ListOfArticles/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/SingleColumnLayout.cshtml";
-    ViewBag.Title = "Aktualności";
+    ViewBag.Title = "cos....";
 }
 
 @section articleTitle
