--- a/KoloLos/Views/ListOfArticles/Index.cshtml
+++ b/KoloLos/Views/ListOfArticles/Index.cshtml
@@ -4,10 +4,12 @@
     Layout = "~/Views/Shared/SingleColumnLayout.cshtml";
     ViewBag.Title = "title";
 }
+
 @section articleTitle
 {
-    Aktualności
+Aktualności
 }
+
 <ul class="blog-posts content-items">
     @for (int i = 0; i < Model.ArticleAbstracts.Length; i++)
     {
@@ -19,7 +21,7 @@
             <article class="content-item blog-post">
                 <header>
                     <h1>
-                        @Html.ActionLink(articleAbstract.Title, "Details", new { id = articleAbstract.Id }, null)
+                        @Html.RouteLink(articleAbstract.Title, "articlesDetails", new { id = articleAbstract.Id })
                     </h1>
                     <div class="metadata">
                         <div class="published">
@@ -29,12 +31,13 @@
                 </header>
                 <p>
                     @articleAbstract.Abstract
-                    @Html.ActionLink("więcej", "Details", new { id = articleAbstract.Id }, null)
+                    @Html.ActionLink("więcej", "Details", new { pageIndex = articleAbstract.Id }, null)
                 </p>
             </article>
         </li>
     }
 </ul>
+
 <ul class="pager group">
     @if (Model.PreviousPageExists)
     {
@@ -49,3 +52,4 @@
         </li>
     }
 </ul>
+
