--- a/KoloLos/Views/ListOfArticles/Index.cshtml
+++ b/KoloLos/Views/ListOfArticles/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model KoloLos.Models.ArticleAbstractsList
+﻿@using KoloLosCommon
+@model KoloLos.Models.ArticleAbstractsList
 
 @{
     Layout = "~/Views/Shared/SingleColumnLayout.cshtml";
@@ -7,7 +8,14 @@
 
 @section articleTitle
 {
-Aktualności
+    @if (Model.Category == Category.News)
+    {
+        @:Aktualności
+    }
+    else if (Model.Category == Category.Resolutions)
+    {
+        @:Uchwały
+    }
 }
 
 <ul class="blog-posts content-items">
