--- a/KoloLos/Views/Shared/ManagerLayout.cshtml
+++ b/KoloLos/Views/Shared/ManagerLayout.cshtml
@@ -24,4 +24,8 @@
 
     <div class="clear"></div>
 </div>
+
 @RenderSection("scripts", required: false)
+
+<script src="~/Scripts/jquery.ui.datepicker-pl.js"></script>
+<script src="~/Scripts/losScripts.js"></script>
