--- a/KoloLos/Views/Shared/_Layout.cshtml
+++ b/KoloLos/Views/Shared/_Layout.cshtml
@@ -14,5 +14,6 @@
                 @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
 </body>
 </html>
