replacing jqueryui datepicker with asp mvc attributed datatype control. still doesnt format properly though

--- a/KoloLos/Views/ArticlesManager/Create.cshtml
+++ b/KoloLos/Views/ArticlesManager/Create.cshtml
@@ -56,6 +56,6 @@
     @Html.ActionLink("Powrót do listy", "Index")
 </div>
 
-@section Scripts {
+@section managerScripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
