--- a/KoloLos/Views/Shared/ManagerLayout.cshtml
+++ b/KoloLos/Views/Shared/ManagerLayout.cshtml
@@ -4,7 +4,7 @@
 <link href="~/Content/manager.css" rel="stylesheet" />
 
 <div id="managerHeader">
-    <h1>Super Simple Two Column Layout</h1>
+    <h1>Koło łowieckie "Łoś" w Tarnowie</h1>
 </div>
 
 <div id="content">
