--- a/KoloLos/Views/ArticlesManager/Details.cshtml
+++ b/KoloLos/Views/ArticlesManager/Details.cshtml
@@ -46,5 +46,5 @@
 </fieldset>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </p>
