Added gallery folders creation

--- a/KoloLos/Views/Shared/ManagerLayout.cshtml
+++ b/KoloLos/Views/Shared/ManagerLayout.cshtml
@@ -16,6 +16,7 @@
             <li>@Html.RouteLink("Uchwały", "manager", new { category = Category.Resolutions })</li>
             <li>@Html.RouteLink("Historia", "manager", new { category = Category.History })</li>
             <li>@Html.RouteLink("Kontakt", "manager", new { category = Category.Contact })</li>
+            <li>@Html.ActionLink("Galerie", "Index", "GalleryManager")</li>
         </ul>
     </div>
 
