--- a/KoloLos/Views/Shared/ManagerLayout.cshtml
+++ b/KoloLos/Views/Shared/ManagerLayout.cshtml
@@ -17,6 +17,7 @@
             <li>@Html.RouteLink("Historia", "manager", new { category = Category.History })</li>
             <li>@Html.RouteLink("Kontakt", "manager", new { category = Category.Contact })</li>
             <li>@Html.ActionLink("Galerie", "Index", "GalleryManager")</li>
+            <li>@Html.ActionLink("Pokaz slajdów", "Index", "SlideShowManager")</li>
         </ul>
     </div>
 
