--- a/KoloLos/Views/GalleryManager/Index.cshtml
+++ b/KoloLos/Views/GalleryManager/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<KoloLos.Models.Gallery.GalleryLink>
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Galerie zdjęć";
     Layout = "../Shared/ManagerLayout.cshtml";
 }
 
