--- a/KoloLos/Views/ListOfArticles/Index.cshtml
+++ b/KoloLos/Views/ListOfArticles/Index.cshtml
@@ -29,7 +29,7 @@
             <article class="content-item blog-post">
                 <header>
                     <h1>
-                        @Html.RouteLink(articleAbstract.Title, new { id = articleAbstract.Id })
+                        @Html.RouteLink(articleAbstract.Title, new { category = Model.Category, id = articleAbstract.Id })
                     </h1>
                     <div class="metadata">
                         <div class="published">
