--- a/KoloLos/Views/Main/Index.cshtml
+++ b/KoloLos/Views/Main/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using KoloLos.Models
+@using KoloLosCommon
 @model MainPageModel
 
 @{
@@ -77,7 +78,7 @@
                                             <div class="small-ribbon-wrapper">
                                                 <div class="small-ribbon-front">
                                                     <div class="homepageNews">
-                                                        @Html.RouteLink(articleAbstract.Title, "articleById", new { id = articleAbstract.Id })
+                                                        @Html.RouteLink(articleAbstract.Title, "articleById", new { Category = Category.News, id = articleAbstract.Id })
                                                     </div>
                                                 </div>
                                                 <div class="small-ribbon-edge-topright">
