--- a/KoloLos/Views/Shared/ManagerLayout.cshtml
+++ b/KoloLos/Views/Shared/ManagerLayout.cshtml
@@ -18,6 +18,7 @@
             <li>@Html.RouteLink("Kontakt", "manager", new { category = Category.Contact })</li>
             <li>@Html.ActionLink("Galerie", "Index", "GalleryManager")</li>
             <li>@Html.ActionLink("Pokaz slajdów", "Index", "SlideShowManager")</li>
+            <li>@Html.Partial("LogoutPartial")</li>
         </ul>
     </div>
 
